Add exception for removing song which does not exist